Augmented slack api w/ user login
